@@ -1,26 +1,22 @@
 import java.io.*;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-
 public class FileReader {
-    private List<String> expresiones;
+    private List<List<String>> expresiones;
 
     public FileReader(){
         this.expresiones = new ArrayList<>();
     }
 
-   
-
-    public List<String> tomarExpresion(String archivo) throws IOException{
+    public List<List<String>> tomarExpresion(String archivo) throws IOException{
         expresiones.clear();
         try(BufferedReader br = new BufferedReader(new java.io.FileReader(archivo))){
             String linea;
             while ((linea = br.readLine()) != null){
                 if (!linea.trim().isEmpty()) {
-                     String[] partes = linea.trim().split("\\s+"); // Lee todo pero separando los elementos por espacios " "
-                     expresiones.addAll(Arrays.asList(partes));   
+                     List<String> partes = List.of(linea.trim().split("\\s+")); // Lee todo pero separando los elementos por espacios " "
+                     expresiones.add(partes);   
                      }
             }
         }
@@ -36,9 +32,9 @@ public class FileReader {
         if (isEmpty()) {
             System.out.println("No se encontraron expresiones en el archivo.");
         } else {
-            System.out.println("La siguiente expresion es: ");
-            for (String expresion : expresiones) {
-                System.out.println(expresion);
+            System.out.println("Las expresiones encontradas son: ");
+            for (int i = 0; i< expresiones.size(); i++) {
+                System.out.println("Expresion" +(i+1) + " " + expresiones.get(i));
             }
         }
     }
